# mitxonline-api-clients

./: README.md  VERSION  pyproject.toml
.github/workflows/: ci-axios.yml
config/: typescript-axios-v0.yaml  typescript-axios-v1.yaml  typescript-axios-v2.yaml
scripts/: generate-inner.sh  generate.sh  generate_branch_client.sh  local-generate.sh
src/typescript/mitxonline-api-axios/: package.json  package.tgz
src/typescript/mitxonline-api-axios/src/v0/: api.ts  base.ts  common.ts  configuration.ts  index.ts
src/typescript/mitxonline-api-axios/src/v1/: api.ts  base.ts  common.ts  configuration.ts  index.ts
src/typescript/mitxonline-api-axios/src/v2/: api.ts  base.ts  common.ts  configuration.ts  index.ts
