[tool.poetry]
name = "mitxonline-api-clients"
version = "2025.10.29"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bumpver = "^2025.1131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "2025.10.29"
version_pattern = "YYYY.MM.DD[.INC0]"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"src/typescript/mitxonline-api-axios/package.json" = [
    '"version": "{version}"',
]
"VERSION" = [
    "^{version}",
]
